# de

./: .gitignore  README.md
basic/: .gitignore  README.md  docker-compose.yml  pyproject.toml
basic/airflow/dags/: bo_dag.py  etl_dag.py  po_dag.py
basic/airflow/dags/config/: db.py
basic/airflow/dags/jobs/: extract_data.py  save_data.py
basic/docker/: airflow.dockerfile  db.dockerfile
dbt-dwh/: README.md
dbt-dwh/airdata/: setup.sql
dbt-dwh/airdata/bnbdata/: README.md  dbt_project.yml  packages.yml
dbt-dwh/airdata/bnbdata/analyses/: query_full_moon.sql
dbt-dwh/airdata/bnbdata/macros/: no_nulls_in_columns.sql  positive_value.sql
dbt-dwh/airdata/bnbdata/models/: docs.md  exposure.yml  overview.md  schema.yml  sources.yml
dbt-dwh/airdata/bnbdata/snapshots/: snap_raw_hosts.sql  snap_raw_listings.sql
dbt-dwh/airdata/bnbdata/tests/: test_dim_listings_min_nights.sql  test_no_nulls_in_dim_listings.sql  test_review_before_listing.sql
dbt-dwh/dbtred/docker/: Dockerfile
dbt-dwh/dbtsnow/docker/: Dockerfile
dbt-dwh/dbtsnow/shop/: dbt_project.yml
dwh/redshift/: querytkdb.sql
dwh/snowflake/: basic.py  snowalchemy.py  snowpark.py  snowpark_ml.py  snowpark_utils.py  snowpyspark.py
dwh/snowflake/query/: cluster.sql  datagen.sql  ddl.sql  pipe.sql  privileges.sql  shop.sql  task.sql  udf.sql  udfpy.sql  utils.sql  variant.sql  window.sql
pyspark/: README.md  ml_air.py  sql_query.py
pyspark/sparkmoviesapp/: README.md
pyspark/sparkordersapp/: README.md  docker-compose.yaml  init.py  main.py
pyspark/sparkordersapp/utils/: db.py
(+15 files in other folders)
