[tool.poetry]
name = "airflowtest"
version = "0.1.0"
description = "an airflow test"
authors = ["rpalloni"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"
apache-airflow = "^2.2.5"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core=1.1.8"]
build-backend = "poetry.core.masonry.api"
